fix: config backend